gitops/infra-custom/dumbpad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dumbpad
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: dumbpad
