gitops/infra-custom/dumbpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumbpad
  namespace: dumbpad
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: dumbpad
    app.kubernetes.io/part-of: dumbpad
spec:
  selector:
    app.kubernetes.io/name: dumbpad
  ports:
    - name: http
      port: 3000
      targetPort: http
